kta-manifest/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kta-webapp
spec:
  selector:
    matchLabels:
      app: kta
      cmp: webapp
  template:
    metadata:
      labels:
        app: kta
        cmp: webapp
    spec:
      containers:
      - name: app
        image: mrupgrade/kta-webapp-flask:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /log/
          name: log
      volumes:
      - name: log
        persistentVolumeClaim:
          claimName: kta-log-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: kta-webapp
spec:
  selector:
    app: kta
    cmp: webapp
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
