kta-manifest/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kta-db
spec:
  selector:
    matchLabels:
      app: kta
      cmp: db
  template:
    metadata:
      labels:
        app: kta
        cmp: db
    spec:
      containers:
      - name: kta-db
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/
          name: pgdata
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: kta-db-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: kta-db
spec:
  selector:
    app: kta
    cmp: db
  type: NodePort
  ports:
  - protocol: TCP
    name: db-uri
    port: 5432
    targetPort: 5432
