kta-manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kta
spec:
  rules:
  - host: kta.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: kta-webapp
          servicePort: 8080
